# maintec

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dump.rdb
avro/idl/: com.garani.maintec.api.LaserService.avdl
bundles/api/: CMakeLists.txt
bundles/bringup/: CMakeLists.txt
bundles/maintec/: CMakeLists.txt
bundles/maintec/include/data/: IData.h
bundles/maintec/include/processor/: ChainProcessor.h  IProcessor.h
bundles/maintec/include/validator/: IValidator.h
bundles/maintec/src/: BringUpActivator.cc  EndpointTestActivator.cc  HttpProcessorActivator.cc  MaintecActivator.cc  ProcessorActivator.cc
bundles/maintec/src/processor/: ChainProcessor.h  HttpMethodProcessor.cc  JsonHelperProcessor.h
bundles/maintec_api/: CMakeLists.txt  com.garani.maintec.api.LaserService.avpr  com.garani.maintec.api.Processor.avdl  com.garani.maintec.api.Processor.avpr  org.apache.celix.maintec.api.Processor.avdl  org.apache.celix.maintec.api.Processor.avpr
bundles/maintec_api/include/: laser_service.h  processor_service.h
bundles/maintec_endpoint/: CMakeLists.txt
bundles/maintec_endpoint/src/: maintec_endpoint_activator.c  process_command.c  process_command.h
bundles/maintec_main/: CMakeLists.txt
bundles/maintec_main/src/: MaintecActivator.cc
bundles/maintec_service/: CMakeLists.txt
bundles/maintec_service/src/: laser_service_impl.c  laser_service_impl.h  maintec_service_activator.c  process_impl.c  process_impl.h
bundles/processor/: CMakeLists.txt
bundles/processor/src/processor/: ChainProcessor.h  HttpMethodProcessor.cc
bundles/remote/: CMakeLists.txt
conf/: bblayers.conf  local.conf  sanity_info
doc/: ComponentDiagram.md
doc/class_diagram/: Laser.md
doc/component_diagram/: maintec_service.md
docker/: Dockerfile  docker-compose.yml
docker/base/: Dockerfile
docker/data/: start_endpoint.sh  start_maintec.sh
metas/meta-maintec/: README
metas/meta-maintec/conf/: layer.conf
metas/meta-maintec/recipes-celix/celix/: celix.bb  celix_2.2.1.bb
metas/meta-maintec/recipes-celix/celix/celix/: 0001-Update-to-Cross-Compile-in-Yocto.patch  0002-Update-to-Generate-Shared-Library-Version.patch
metas/meta-maintec/recipes-maintec/maintec/: maintec_0.1.0.bb
metas/meta-maintec/recipes-maintec/maintec-service/: maintec-service.bb  maintec-service_0.1.0.bb
metas/meta-maintec/recipes-maintec/maintec-service/maintec-service/: maintec.service  maintec.sh
